--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
-    "mongoose": "^6.4.2",
+    "mongoose": "^6.4.3",
     "path": "^0.12.7",
+    "shortid": "^2.2.16",
     "websocket": "^1.0.34"
   }
 }
